--- a/TestSite/TestSite/Views/ResultsAnalysis/Index.cshtml
+++ b/TestSite/TestSite/Views/ResultsAnalysis/Index.cshtml
@@ -189,6 +189,12 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
+                            <b>Закон распределения:</b>&nbsp;
+                            @Html.DisplayFor(model => model.StatisticResult)
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
                             <b>Дисперсия:</b>&nbsp;
                             @Html.DisplayFor(model => model.StatisticDispersion)
                         </div>
